Fixed yaml file to run the python attack

--- a/syn_flood_attack/docker-compose.yml
+++ b/syn_flood_attack/docker-compose.yml
@@ -30,7 +30,8 @@ services:
         apt-get update && 
         apt-get install -y iputils-ping net-tools &&
         pip install scapy &&
-        python/volumes/syn_flood.py
+        cd /volumes &&
+        python3 syn_flood.py
       "
     cap_add:
       - ALL
