--- a/C/docker-compose.yml
+++ b/C/docker-compose.yml
@@ -1,5 +1,4 @@
 version: '3'
-
 services:
   ApacheServer:
     image: httpd:latest
@@ -12,33 +11,55 @@ services:
         ipv4_address: 10.9.0.2
     ports:
       - "80:80"
+    volumes:
+      - ./volumes:/volumes
+    command: >
+      bash -c "
+      apt-get update &&
+      apt-get install -y net-tools tcpdump &&
+      echo \"Container started at: $$(date)\" > /volumes/netstat_output.txt &&
+      httpd-foreground &
+      while true; do
+        echo \"Timestamp: $$(date)\" >> /volumes/netstat_output.txt
+        netstat -tuna >> /volumes/netstat_output.txt
+        echo \"----------------------------------------\" >> /volumes/netstat_output.txt
+        sleep 10
+      done"
 
   Attacker:
-    image: ubuntu:latest
+    image: gcc:latest
     container_name: attacker-10.9.0.3
     networks:
       net-10.9.0.0:
         ipv4_address: 10.9.0.3
-    command: bash -c "
-              apt-get update && apt-get install -y openbsd-inetd &&
-              /etc/init.d/openbsd-inetd start  &&
-              cd /volumes &&
-              ./syn_flood &&
-              tail -f /dev/null"
-    cap_add:
-      - ALL
-    privileged: true
     volumes:
       - ./volumes:/volumes
+    command: >
+      bash -c "
+      cd /volumes &&
+      gcc -o syn_flood syn_flood.c -lm &&
+      ./syn_flood"
+    cap_add:
+      - NET_RAW
+      - NET_ADMIN
+    privileged: true
 
   Monitor:
     image: ubuntu:latest
     container_name: monitor-all
     network_mode: host
-    command: bash -c "
-              apt-get update && apt-get install -y openbsd-inetd && apt-get install -y iputils-ping &&
-              /etc/init.d/openbsd-inetd start &&
-              ping 10.9.0.2 > /volumes/ping.txt"
+    command: >
+      bash -c "
+      apt-get update &&
+      apt-get install -y iputils-ping &&
+      mkdir -p /volumes &&
+      echo \"Container started at: $$(date)\" > /volumes/ping.txt &&
+      while true; do
+        echo \"Timestamp: $$(date)\" >> /volumes/ping.txt
+        ping -c 10 -i 0.2 10.9.0.2 | tee -a /volumes/ping.txt
+        echo '---' >> /volumes/ping.txt
+        sleep 5
+      done"
     cap_add:
       - ALL
     privileged: true
