removed the -i option when sending pings from the monitor

--- a/C/docker-compose.yml
+++ b/C/docker-compose.yml
@@ -57,7 +57,7 @@ services:
       echo \"Container started at: $$(date)\" > /volumes/ping.txt &&
       while true; do
         echo \"Timestamp: $$(date)\" >> /volumes/ping.txt
-        ping -c 1 -i 0.2 10.9.0.2 | tee -a /volumes/ping.txt
+        ping -c 1 10.9.0.2 | tee -a /volumes/ping.txt
         echo '---' >> /volumes/ping.txt
         sleep 5
       done"
