Changed cap_add in the attacker to ALL - Was checked

--- a/C/docker-compose.yml
+++ b/C/docker-compose.yml
@@ -41,8 +41,7 @@ services:
       sleep 20 &&
       ./syn_flood"
     cap_add:
-      - NET_RAW
-      - NET_ADMIN
+      - ALL
     privileged: true
 
   Monitor:
